Added fixes for video using bootstrap ratio tag

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -193,11 +193,13 @@
         <div class="pd-hero-video-5-modal" id="modal5">
             <span><a name="anchor" href="#" class="pd-hero-video-5-close" data-modal-id="modal5">Close<img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40"></a></span>
             <div class="pd-hero-video-5-modal-video-outer">
-                <div class="ratio ratio-16x9">
-                    <video preload="none" controls width="750px">
-                        <source src="/assets/movies/file.mp4" type="video/webm"/>
-                        Sorry, your browser doesn't support embedded videos.
-                    </video>
+                <div class="pd-hero-video-5-modal-video-inner">
+                    <div class="ratio ratio-16x9">
+                        <video preload="none" controls width="750px">
+                            <source src="/assets/movies/file.mp4" type="video/webm"/>
+                            Sorry, your browser doesn't support embedded videos.
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
@@ -246,11 +248,14 @@
         <div class="pd-hero-video-6-modal" id="modal6">
             <span><a name="anchor" href="#" class="pd-hero-video-6-close" data-modal-id="modal6">Close<img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40"></a></span>
             <div class="pd-hero-video-6-modal-video-outer">
-                <video preload="none" controls width="750px">
-                    <source src="/assets/movies/file.mp4" type="video/webm"/>
-                    <source src="/assets/movies/file.mp4" type="video/mp4"/>
-                    Sorry, your browser doesn't support embedded videos.
-                </video>
+                <div class="pd-hero-video-6-modal-video-inner">
+                    <div class="ratio ratio-16x9">
+                        <video preload="none" controls width="750px">
+                            <source src="/assets/movies/file.mp4" type="video/webm"/>
+                            Sorry, your browser doesn't support embedded videos.
+                        </video>
+                    </div>
+                </div>
             </div>
         </div>
         <section class="pb-5 pt-5" style="position: relative;">
