Video fix for modal window on macs

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -195,7 +195,7 @@
             <div class="pd-hero-video-5-modal-video-outer">
                 <div class="pd-hero-video-5-modal-video-inner">
                     <div class="ratio ratio-16x9">
-                        <video preload="none" controls width="750px">
+                        <video preload="metadata" autoplay muted controls width="1036" height="582" playsinline>
                             <source src="/assets/movies/file.mp4" type="video/webm"/>
                             Sorry, your browser doesn't support embedded videos.
                         </video>
@@ -250,7 +250,7 @@
             <div class="pd-hero-video-6-modal-video-outer">
                 <div class="pd-hero-video-6-modal-video-inner">
                     <div class="ratio ratio-16x9">
-                        <video preload="none" controls width="750px">
+                        <video preload="metadata" autoplay muted controls width="1036" height="582" playsinline>
                             <source src="/assets/movies/file.mp4" type="video/webm"/>
                             Sorry, your browser doesn't support embedded videos.
                         </video>
