transformed link into button

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -238,7 +238,9 @@
                         </div>
                         <footer>
                             <div class="pd-hero-video-6-play-outer">
-                                <a href="#" name="anchor" class="pd-hero-video-6-modal-link" data-modal-id="modal6"><img src="images/design-assets/play-white.svg" alt="play icon" width="100" height="100"></a>
+                                <button class="pd-hero-video-6-modal-link" data-modal-id="modal6">
+                                    <img src="images/design-assets/play-white.svg" alt="play icon" width="100" height="100">
+                                </button>
                             </div>
                         </footer>                         
                     </div>
@@ -246,7 +248,9 @@
             </div>
         </section>
         <div class="pd-hero-video-6-modal" id="modal6">
-            <span><a name="anchor" href="#" class="pd-hero-video-6-close" data-modal-id="modal6">Close<img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40"></a></span>
+            <span><button class="pd-hero-video-6-close" data-modal-id="modal6">Close
+                    <img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40">
+                </button></span>
             <div class="pd-hero-video-6-modal-video-outer">
                 <div class="pd-hero-video-6-modal-video-inner">
                     <div class="ratio ratio-16x9">
