--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -238,7 +238,7 @@
                         </div>
                         <footer>
                             <div class="pd-hero-video-6-play-outer">
-                                <button class="pd-hero-video-6-modal-link" data-modal-id="modal6">
+                                <button class="pd-hero-video-6-modal-link" data-modal-id="modal6" type="button">
                                     <img src="images/design-assets/play-white.svg" alt="play icon" width="100" height="100">
                                 </button>
                             </div>
@@ -248,7 +248,7 @@
             </div>
         </section>
         <div class="pd-hero-video-6-modal" id="modal6">
-            <span><button class="pd-hero-video-6-close" data-modal-id="modal6">Close
+            <span><button type="button" class="pd-hero-video-6-close" data-modal-id="modal6">Close
                     <img src="images/design-assets/icon-close.svg" alt="icon for closing window" width="40" height="40">
                 </button></span>
             <div class="pd-hero-video-6-modal-video-outer">
