Added new fix for button events in safari

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -237,7 +237,7 @@
                             </div>
                         </div>
                         <footer>
-                            <div class="pd-hero-video-6-play-outer">
+                            <div onclick="void(0);" class="pd-hero-video-6-play-outer">
                                 <button class="pd-hero-video-6-modal-link" data-modal-id="modal6" type="button">
                                     <img src="images/design-assets/play-white.svg" alt="play icon" width="100" height="100">
                                 </button>
