Added new fix for button events in safari

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -238,7 +238,7 @@
                         </div>
                         <footer>
                             <div onclick="void(0);" class="pd-hero-video-6-play-outer">
-                                <button class="pd-hero-video-6-modal-link" data-modal-id="modal6" type="button">
+                                <button class="pd-hero-video-6-modal-link" data-modal-id="modal6" type="button" onclick="void(0)">
                                     <img src="images/design-assets/play-white.svg" alt="play icon" width="100" height="100">
                                 </button>
                             </div>
