Added type video mp4

--- a/_factory_heroVideos.html
+++ b/_factory_heroVideos.html
@@ -254,7 +254,7 @@
             <div class="pd-hero-video-6-modal-video-outer">
                 <div class="pd-hero-video-6-modal-video-inner">
                     <div class="ratio ratio-16x9">
-                        <video preload="none" autoplay muted controls width="1036" height="582" playsinline type="video/mp4">
+                        <video preload="false" autoplay muted controls width="1036" height="582" playsinline type="video/mp4">
                             <source src="/assets/movies/file.mp4" type="video/webm"/>
                             Sorry, your browser doesn't support embedded videos.
                         </video>
