Added in a couple more heroHalfs

--- a/_factory_heroesHalf.html
+++ b/_factory_heroesHalf.html
@@ -21,16 +21,16 @@
         <section class="pd-heroesHalf-1" style="position: relative;">
             <div class="pd-heroesHalf-1-image-outer">
                 <script>
-                function imageLoadedListener6(e) {
-                    const heroImage6 = document.querySelector(".pd-hero-6-image");
-                    heroImage6.classList.add("pd-hero-image-6-loaded");
+                function imageLoadedListener1(e) {
+                    const heroHalfImage1 = document.querySelector(".pd-heroesHalf-1-image");
+                    heroHalfImage1.classList.add("pd-heroesHalf-1-image-loaded");
                 }
             </script>
                 <picture>
                     <source srcset="/images/uploads/hero-half-scissors-people-working.webp 1800w, 
                                 /images/uploads/hero-scissors-people-working-mob.webp 820w" sizes="(max-width: 600px) 100vw, 1800px" type="image/webp">
                     <img srcset="/images/uploads/hero-half-scissors-people-working.jpg 1800w,
-                            /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-half--scissors-people-working.jpg" class="pd-hero-6-image" onload="imageLoadedListener6()"/>
+                            /images/uploads/hero-scissors-people-working-mob.jpg 820w" sizes="(max-width: 600px) 100vw, 1800px" src="/images/uploads/hero-half--scissors-people-working.jpg" onload="imageLoadedListener1()" class="pd-heroesHalf-1-image"/>
                 </picture>
             </div>
             <div class="pd-heroesHalf-1-overlay"></div>
@@ -55,6 +55,54 @@
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-2</p>
+            </div>
+        </section>
+        <section style="position: relative;" class="pd-heroesHalf-2">
+            <div class="container" style="position: relative;">
+                <div class="row">
+                    <div class="col-lg-8 pb-4 pt-4">
+                        <div class="p-2 pd-heroesHalf-2-text-outer">
+                            <header>
+                                <h1>Blog</h1>
+                                <div class="pd-heroesHalf-2-headline">
+                                    <p><strong>Latest Posts</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-heroesHalf-2-subHeadline">
+                                <p>Read our latest posts about the world of recruitment software</p>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-3</p>
+            </div>
+        </section>
+        <section style="position: relative;" class="pd-heroesHalf-3">
+            <div class="container" style="position: relative;">
+                <div class="row">
+                    <div class="col-lg-8 pb-4 pt-4">
+                        <div class="p-2 pd-heroesHalf-3-text-outer">
+                            <header>
+                                <h1>Blog</h1>
+                                <div class="pd-heroesHalf-3-headline">
+                                    <p><strong>Latest Posts</strong></p>
+                                </div>
+                            </header>
+                            <div class="pd-heroesHalf-3-subHeadline">
+                                <p>Read our latest posts about the world of recruitment software</p>
+                            </div>
+                        </div>                         
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pb-5 pt-5" style="position: relative;">
+            <div style="position: absolute; bottom: 1px;">
+                <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-heroesHalf-4</p>
             </div>
         </section>
         <!-- Bootstrap core JavaScript
