Added amends to social bar

--- a/_factory_social_media_share.html
+++ b/_factory_social_media_share.html
@@ -69,10 +69,11 @@
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-social-media-share-3</p>
             </div>
         </section>
-        <section class="pb-2 pd-social-media-share-3">
+        <section style="height: 100px; background: blue;"></section>
+        <section class="pd-social-media-share-3">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 d-flex flex-row justify-content-center justify-content-md-end">
+                    <div class="col-12" style="position: relative;">
                         <div class="pd-social-media-share-3-outer">
                             <div>
                                 <img src="images/design-assets/label-share-primary.svg" alt="share social media label" width="50" height="20">
@@ -88,15 +89,16 @@
                 </div>
             </div>
         </section>
-        <section class="pb-5 pt-5" style="position: relative;">
+        <section class="pb-5 pt-5" style="position: relative; height: 200px;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-social-media-share-4</p>
             </div>
         </section>
+        <section class="pg-empty-placeholder" style="background: blue; height: 100px;"></section>
         <section class="pb-2 pd-social-media-share-4">
             <div class="container">
                 <div class="row">
-                    <div class="col-12 d-flex flex-row justify-content-center justify-content-md-end">
+                    <div class="col-12" style="position: relative;">
                         <div class="pd-social-media-share-4-outer">
                             <div>
                                 <img src="images/design-assets/label-share-primary.svg" alt="share social media label" width="50" height="20">
