--- a/_factory_social_media_share.html
+++ b/_factory_social_media_share.html
@@ -12,7 +12,7 @@
         <!-- Custom styles for this template -->
         <link href="style.css" rel="stylesheet">
     </head>
-    <body>
+    <body style="position: relative;">
         <!-- Bootstrap core JavaScript
     ================================================== -->
         <!-- Placed at the end of the document so the pages load faster -->
