--- a/_factory_people.html
+++ b/_factory_people.html
@@ -35,7 +35,7 @@
             <div class="container">
                 <div class="row">
                     <div class="align-items-center col-lg-4 col-md-6 d-flex flex-column justify-content-start pb-4 text-center">
-                        <a href="#" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
+                        <a data-modal-id="julia-marthem-modal" href="javascript:void(0)" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
                                 <picture>
                                     <source srcset="/images/uploads/testimonial-woman.webp" type="image/webp">
                                     <img src="/images/uploads/testimonial-woman.jpg" alt="image of person" width="148" height="148" loading="lazy">
@@ -50,7 +50,7 @@
                             </footer></a> 
                     </div>
                     <div class="align-items-center col-lg-4 col-md-6 d-flex flex-column justify-content-start pb-4 text-center">
-                        <a href="#" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
+                        <a data-modal-id="mike-jaygo-modal" href="javascript:void(0)" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
                                 <picture>
                                     <source srcset="/images/uploads/testimonial-man.webp" type="image/webp">
                                     <img src="/images/uploads/testimonial-man.jpg" alt="image of person" width="148" height="148" loading="lazy">
@@ -65,7 +65,7 @@
                             </footer></a> 
                     </div>
                     <div class="align-items-center col-lg-4 col-md-6 d-flex flex-column justify-content-start pb-4 text-center">
-                        <a href="#" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
+                        <a data-modal-id="kay-allsop-modal" href="javascript:void(0)" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
                                 <picture>
                                     <source srcset="/images/uploads/testimonial-woman-2.webp" type="image/webp">
                                     <img src="/images/uploads/testimonial-woman-2.jpg" alt="image of person" width="148" height="148" loading="lazy">
@@ -80,7 +80,7 @@
                             </footer></a> 
                     </div>
                     <div class="align-items-center col-lg-4 col-md-6 d-flex flex-column justify-content-start pb-4 text-center">
-                        <a href="#" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
+                        <a data-modal-id="michelle-harding-modal" href="javascript:void(0)" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
                                 <picture>
                                     <source srcset="/images/uploads/testimonial-woman-3.webp" type="image/webp">
                                     <img src="/images/uploads/testimonial-woman-3.jpg" alt="image of person" width="148" height="148" loading="lazy">
@@ -95,7 +95,7 @@
                             </footer></a> 
                     </div>
                     <div class="align-items-center col-lg-4 col-md-6 d-flex flex-column justify-content-start pb-4 text-center">
-                        <a href="#" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
+                        <a data-modal-id="dan-reading-modal" href="javascript:void(0)" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
                                 <picture>
                                     <source srcset="/images/uploads/testimonial-man-2.webp" type="image/webp">
                                     <img src="/images/uploads/testimonial-man-2.jpg" alt="image of person" width="148" height="148" loading="lazy">
@@ -110,7 +110,7 @@
                             </footer></a> 
                     </div>
                     <div class="align-items-center col-lg-4 col-md-6 d-flex flex-column justify-content-start pb-4 text-center">
-                        <a href="#" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
+                        <a data-modal-id="lars-manning-modal" href="javascript:void(0)" class="align-items-center d-flex flex-column flex-grow-1 flex-shrink-0 justify-content-start pd-people-1-card-outer"><div class="pd-people-1-image">
                                 <picture>
                                     <source srcset="/images/uploads/testimonial-man-3.webp" type="image/webp">
                                     <img src="/images/uploads/testimonial-man-3.jpg" alt="image of person" width="148" height="148" loading="lazy">
@@ -127,6 +127,84 @@
                 </div>
             </div>
         </section>
+        <section class="pd-people-1-modal" id="julia-marthem-modal">
+            <div class="pd-people-1-modal-overlay"></div>
+            <div class="pd-people-1-modal-card">
+                <div class="pd-people-1-modal-close-outer">
+                    <button type="button">
+                        <img src="images/design-assets/icon-close-dark.svg" alt="icon for closing window" width="20" height="20">
+                    </button>
+                </div>
+                <div class="pd-people-1-modal-left-col">
+                    <picture>
+                        <source srcset="/images/uploads/profile-woman.jpg" type="image/webp">
+                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman.jpg">
+                    </picture>
+                </div>
+                <div class="pd-people-1-modal-right-col">
+                    <h3>Julia Marthem</h3>
+                    <p class="pd-people-1-modal-subHeadline">Managing Director</p>
+                    <div class="pd-people-1-modal-body">
+                        <h4>Experience</h4>
+                        <p>Integer molestie augue in metus finibus tempor. Quisque id justo turpis. Sed blandit, felis rutrum maximus feugiat, lorem velit feugiat tellus, quis sagittis odio ligula sed tellus. Ut porta non sapien non rhoncus. Nulla scelerisque volutpat sapien nec pharetra. Curabitur bibendum tincidunt neque, non scelerisque magna tempus id. </p>
+                        <h4>In spare time...</h4>
+                        <p>Nam vel ultrices eros, aliquet tincidunt diam. Donec tincidunt metus mi, ut interdum ante fringilla sed. Mauris sodales vulputate elit, eget ultrices lorem facilisis vitae. Morbi gravida molestie lectus, in rutrum libero auctor a. Donec eget scelerisque odio, eget placerat nunc. Integer id aliquet dui. Maecenas mollis tincidunt magna, ac dictum est ultrices sed. Integer ac enim facilisis tellus varius dapibus. Vestibulum sollicitudin id risus eget dapibus. Suspendisse egestas metus id elit cursus, ac feugiat neque consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pd-people-1-modal" id="mike-jaygo-modal">
+            <div class="pd-people-1-modal-overlay"></div>
+            <div class="pd-people-1-modal-card">
+                <div class="pd-people-1-modal-close-outer">
+                    <button type="button">
+                        <img src="images/design-assets/icon-close-dark.svg" alt="icon for closing window" width="20" height="20">
+                    </button>
+                </div>
+                <div class="pd-people-1-modal-left-col">
+                    <picture>
+                        <source srcset="/images/uploads/profile-man.jpg" type="image/webp">
+                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man.jpg">
+                    </picture>
+                </div>
+                <div class="pd-people-1-modal-right-col">
+                    <h3>Mike Jaygo</h3>
+                    <p class="pd-people-1-modal-subHeadline">Financial Director</p>
+                    <div class="pd-people-1-modal-body">
+                        <h4>Experience</h4>
+                        <p>Integer molestie augue in metus finibus tempor. Quisque id justo turpis. Sed blandit, felis rutrum maximus feugiat, lorem velit feugiat tellus, quis sagittis odio ligula sed tellus. Ut porta non sapien non rhoncus. Nulla scelerisque volutpat sapien nec pharetra. Curabitur bibendum tincidunt neque, non scelerisque magna tempus id. </p>
+                        <h4>In spare time...</h4>
+                        <p>Nam vel ultrices eros, aliquet tincidunt diam. Donec tincidunt metus mi, ut interdum ante fringilla sed. Mauris sodales vulputate elit, eget ultrices lorem facilisis vitae. Morbi gravida molestie lectus, in rutrum libero auctor a. Donec eget scelerisque odio, eget placerat nunc. Integer id aliquet dui. Maecenas mollis tincidunt magna, ac dictum est ultrices sed. Integer ac enim facilisis tellus varius dapibus. Vestibulum sollicitudin id risus eget dapibus. Suspendisse egestas metus id elit cursus, ac feugiat neque consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pd-people-1-modal" id="kay-allsop-modal">
+            <div class="pd-people-1-modal-overlay"></div>
+            <div class="pd-people-1-modal-card">
+                <div class="pd-people-1-modal-close-outer">
+                    <button type="button">
+                        <img src="images/design-assets/icon-close-dark.svg" alt="icon for closing window" width="20" height="20">
+                    </button>
+                </div>
+                <div class="pd-people-1-modal-left-col">
+                    <picture>
+                        <source srcset="/images/uploads/profile-woman-2.jpg" type="image/webp">
+                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman-2.jpg">
+                    </picture>
+                </div>
+                <div class="pd-people-1-modal-right-col">
+                    <h3>Kay Allsop</h3>
+                    <p class="pd-people-1-modal-subHeadline">HR Director</p>
+                    <div class="pd-people-1-modal-body">
+                        <h4>Experience</h4>
+                        <p>Integer molestie augue in metus finibus tempor. Quisque id justo turpis. Sed blandit, felis rutrum maximus feugiat, lorem velit feugiat tellus, quis sagittis odio ligula sed tellus. Ut porta non sapien non rhoncus. Nulla scelerisque volutpat sapien nec pharetra. Curabitur bibendum tincidunt neque, non scelerisque magna tempus id. </p>
+                        <h4>In spare time...</h4>
+                        <p>Nam vel ultrices eros, aliquet tincidunt diam. Donec tincidunt metus mi, ut interdum ante fringilla sed. Mauris sodales vulputate elit, eget ultrices lorem facilisis vitae. Morbi gravida molestie lectus, in rutrum libero auctor a. Donec eget scelerisque odio, eget placerat nunc. Integer id aliquet dui. Maecenas mollis tincidunt magna, ac dictum est ultrices sed. Integer ac enim facilisis tellus varius dapibus. Vestibulum sollicitudin id risus eget dapibus. Suspendisse egestas metus id elit cursus, ac feugiat neque consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-people-2</p>
@@ -137,5 +215,6 @@
         <!-- Placed at the end of the document so the pages load faster -->
         <script src="assets/js/popper.min.js"></script>
         <script src="bootstrap/js/bootstrap.min.js"></script>
+        <script src="assets/js/functions-modals-people.js"></script>
     </body>
 </html>
