Added modal windows for people cards

--- a/_factory_people.html
+++ b/_factory_people.html
@@ -205,6 +205,84 @@
                 </div>
             </div>
         </section>
+        <section class="pd-people-1-modal" id="michelle-harding-modal">
+            <div class="pd-people-1-modal-overlay"></div>
+            <div class="pd-people-1-modal-card">
+                <div class="pd-people-1-modal-close-outer">
+                    <button type="button">
+                        <img src="images/design-assets/icon-close-dark.svg" alt="icon for closing window" width="20" height="20">
+                    </button>
+                </div>
+                <div class="pd-people-1-modal-left-col">
+                    <picture>
+                        <source srcset="/images/uploads/profile-woman-3.jpg" type="image/webp">
+                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-woman-3.jpg">
+                    </picture>
+                </div>
+                <div class="pd-people-1-modal-right-col">
+                    <h3>Michelle Harding</h3>
+                    <p class="pd-people-1-modal-subHeadline">Deputy MD</p>
+                    <div class="pd-people-1-modal-body">
+                        <h4>Experience</h4>
+                        <p>Integer molestie augue in metus finibus tempor. Quisque id justo turpis. Sed blandit, felis rutrum maximus feugiat, lorem velit feugiat tellus, quis sagittis odio ligula sed tellus. Ut porta non sapien non rhoncus. Nulla scelerisque volutpat sapien nec pharetra. Curabitur bibendum tincidunt neque, non scelerisque magna tempus id. </p>
+                        <h4>In spare time...</h4>
+                        <p>Nam vel ultrices eros, aliquet tincidunt diam. Donec tincidunt metus mi, ut interdum ante fringilla sed. Mauris sodales vulputate elit, eget ultrices lorem facilisis vitae. Morbi gravida molestie lectus, in rutrum libero auctor a. Donec eget scelerisque odio, eget placerat nunc. Integer id aliquet dui. Maecenas mollis tincidunt magna, ac dictum est ultrices sed. Integer ac enim facilisis tellus varius dapibus. Vestibulum sollicitudin id risus eget dapibus. Suspendisse egestas metus id elit cursus, ac feugiat neque consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pd-people-1-modal" id="dan-reading-modal">
+            <div class="pd-people-1-modal-overlay"></div>
+            <div class="pd-people-1-modal-card">
+                <div class="pd-people-1-modal-close-outer">
+                    <button type="button">
+                        <img src="images/design-assets/icon-close-dark.svg" alt="icon for closing window" width="20" height="20">
+                    </button>
+                </div>
+                <div class="pd-people-1-modal-left-col">
+                    <picture>
+                        <source srcset="/images/uploads/profile-man-2.jpg" type="image/webp">
+                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man-2.jpg">
+                    </picture>
+                </div>
+                <div class="pd-people-1-modal-right-col">
+                    <h3>Dan Reading</h3>
+                    <p class="pd-people-1-modal-subHeadline">Head of Development</p>
+                    <div class="pd-people-1-modal-body">
+                        <h4>Experience</h4>
+                        <p>Integer molestie augue in metus finibus tempor. Quisque id justo turpis. Sed blandit, felis rutrum maximus feugiat, lorem velit feugiat tellus, quis sagittis odio ligula sed tellus. Ut porta non sapien non rhoncus. Nulla scelerisque volutpat sapien nec pharetra. Curabitur bibendum tincidunt neque, non scelerisque magna tempus id. </p>
+                        <h4>In spare time...</h4>
+                        <p>Nam vel ultrices eros, aliquet tincidunt diam. Donec tincidunt metus mi, ut interdum ante fringilla sed. Mauris sodales vulputate elit, eget ultrices lorem facilisis vitae. Morbi gravida molestie lectus, in rutrum libero auctor a. Donec eget scelerisque odio, eget placerat nunc. Integer id aliquet dui. Maecenas mollis tincidunt magna, ac dictum est ultrices sed. Integer ac enim facilisis tellus varius dapibus. Vestibulum sollicitudin id risus eget dapibus. Suspendisse egestas metus id elit cursus, ac feugiat neque consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <section class="pd-people-1-modal" id="lars-manning-modal">
+            <div class="pd-people-1-modal-overlay"></div>
+            <div class="pd-people-1-modal-card">
+                <div class="pd-people-1-modal-close-outer">
+                    <button type="button">
+                        <img src="images/design-assets/icon-close-dark.svg" alt="icon for closing window" width="20" height="20">
+                    </button>
+                </div>
+                <div class="pd-people-1-modal-left-col">
+                    <picture>
+                        <source srcset="/images/uploads/profile-man-3.jpg" type="image/webp">
+                        <img loading="lazy" alt="image of team member" width="400" height="600" src="images/uploads/profile-man-3.jpg">
+                    </picture>
+                </div>
+                <div class="pd-people-1-modal-right-col">
+                    <h3>Lars Manning</h3>
+                    <p class="pd-people-1-modal-subHeadline">Account Director</p>
+                    <div class="pd-people-1-modal-body">
+                        <h4>Experience</h4>
+                        <p>Integer molestie augue in metus finibus tempor. Quisque id justo turpis. Sed blandit, felis rutrum maximus feugiat, lorem velit feugiat tellus, quis sagittis odio ligula sed tellus. Ut porta non sapien non rhoncus. Nulla scelerisque volutpat sapien nec pharetra. Curabitur bibendum tincidunt neque, non scelerisque magna tempus id. </p>
+                        <h4>In spare time...</h4>
+                        <p>Nam vel ultrices eros, aliquet tincidunt diam. Donec tincidunt metus mi, ut interdum ante fringilla sed. Mauris sodales vulputate elit, eget ultrices lorem facilisis vitae. Morbi gravida molestie lectus, in rutrum libero auctor a. Donec eget scelerisque odio, eget placerat nunc. Integer id aliquet dui. Maecenas mollis tincidunt magna, ac dictum est ultrices sed. Integer ac enim facilisis tellus varius dapibus. Vestibulum sollicitudin id risus eget dapibus. Suspendisse egestas metus id elit cursus, ac feugiat neque consectetur.</p>
+                    </div>
+                </div>
+            </div>
+        </section>
         <section class="pb-5 pt-5" style="position: relative;">
             <div style="position: absolute; bottom: 1px;">
                 <p style="font-weight: 700; padding-bottom: 5px; padding-left: 10px; margin-bottom: 0px;">pd-people-2</p>
